@@ -42,7 +42,7 @@ public class Day02Test {
         run("2,4,4,5,99,0", "2,4,4,5,99,9801");
         run("1,1,1,4,99,5,6,0,99", "30,1,1,4,2,5,6,0,99");
 
-        final var code = IOUtil.input("Day02").get(0);
+        final var code = IOUtil.input("Day02").getFirst();
         assertEquals("answer 1", run(code, 12, 2), 3716250L);
 
         for (int noun = 0; noun <= 99; noun++) {
